feat(frontweb): responsive

--- a/FrontWeb/locales/en.json
+++ b/FrontWeb/locales/en.json
@@ -21,7 +21,7 @@
     "name": "Name",
     "phone": "Phone",
     "profil": "Profil",
-    "setting": "Setting",
+    "setting": "Settings",
     "apkDownload": "Download for Android",
     "explore": "Explore",
     "search": "Search...",
