--- a/FrontWeb/locales/fr.json
+++ b/FrontWeb/locales/fr.json
@@ -20,8 +20,8 @@
     "en": "Englais",
     "name": "Nom",
     "phone": "Téléphone",
-    "profil": "Profile",
-    "setting": "Parametres",
+    "profil": "Profil",
+    "setting": "Paramètres",
     "apkDownload": "Télécharger pour Android",
     "explore": "Explorer",
     "search": "Rechercher...",
