feat(frontweb): reactions display with actions and multiple other features and fix

--- a/FrontWeb/locales/en.json
+++ b/FrontWeb/locales/en.json
@@ -32,5 +32,6 @@
     "reaction": "Reaction",
     "submit": "Submit",
     "connected": "Connected",
-    "connect": "Connect"
+    "connect": "Connect",
+    "creationarea": "Area's created"
 }
