--- a/FrontWeb/locales/fr.json
+++ b/FrontWeb/locales/fr.json
@@ -32,5 +32,6 @@
     "reaction": "Réaction",
     "submit": "Envoyer",
     "connected": "Connecté",
-    "connect": "se connecter"
+    "connect": "se connecter",
+    "creationarea": "Areas créées"
 }
