fix(frontweb): no crash when 0 area created

--- a/FrontWeb/locales/en.json
+++ b/FrontWeb/locales/en.json
@@ -33,5 +33,6 @@
     "submit": "Submit",
     "connected": "Connected",
     "connect": "Connect",
-    "creationarea": "Area's created"
+    "creationarea": "My Areas",
+    "creationareabutton": "Create an Area"
 }
