--- a/FrontWeb/locales/en.json
+++ b/FrontWeb/locales/en.json
@@ -34,5 +34,10 @@
     "connected": "Connected",
     "connect": "Connect",
     "creationarea": "My Areas",
-    "creationareabutton": "Create an Area"
+    "creationareabutton": "Create an Area",
+    "all": "All",
+    "Are you sure you want to delete this area?": "Are you sure you want to delete this area?",
+    "yes, I m sure": "Yes, I'm sure",
+    "No, cancel": "No, cancel",
+    "delete": "Delete"
 }
