--- a/FrontWeb/locales/en.json
+++ b/FrontWeb/locales/en.json
@@ -39,5 +39,8 @@
     "Are you sure you want to delete this area?": "Are you sure you want to delete this area?",
     "yes, I m sure": "Yes, I'm sure",
     "No, cancel": "No, cancel",
-    "delete": "Delete"
+    "delete": "Delete",
+    "You are not connected": "You are not connected",
+    "sombre": "Dark",
+    "clair": "Light"
 }
