--- a/FrontWeb/locales/fr.json
+++ b/FrontWeb/locales/fr.json
@@ -39,5 +39,8 @@
     "Are you sure you want to delete this area?": "Êtes-vous sûr de vouloir supprimer cette area ?",
     "Yes, I m sure": "Oui, je suis sûr",
     "No, cancel": "Non, annuler",
-    "delete": "Supprimer"
+    "delete": "Supprimer",
+    "You are not connected": "Vous n'êtes pas connecté",
+    "sombre": "Sombre",
+    "clair": "Clair"
 }
