--- a/FrontWeb/locales/fr.json
+++ b/FrontWeb/locales/fr.json
@@ -22,7 +22,7 @@
     "phone": "Téléphone",
     "profil": "Profil",
     "setting": "Paramètres",
-    "apkDownload": "Télécharger pour Android",
+    "apkDownload": "Installer l'apk pour Android",
     "explore": "Explorer",
     "search": "Rechercher...",
     "completeinformation": "Compléter les informations",
@@ -44,5 +44,7 @@
     "sombre": "Sombre",
     "clair": "Clair",
     "Name of the Area": "Nom de l'Area",
-    "Enter the Name of the Area": "Entrez le nom de l'Area"
+    "Enter the Name of the Area": "Entrez le nom de l'Area",
+    "download for free": "télécharger gratuitement",
+    "Complétez tous les champs de texte.": "Complétez tous les champs de texte."
 }
