fix(frontweb): apk -> APK and white text in dark mode in creation page

--- a/FrontWeb/locales/en.json
+++ b/FrontWeb/locales/en.json
@@ -22,7 +22,7 @@
     "phone": "Phone",
     "profil": "Profil",
     "setting": "Settings",
-    "apkDownload": "Install apk for Android",
+    "apkDownload": "Install APK for Android",
     "explore": "Explore",
     "search": "Search...",
     "completeinformation": "Complete information",
