--- a/FrontWeb/locales/fr.json
+++ b/FrontWeb/locales/fr.json
@@ -22,7 +22,7 @@
     "phone": "Téléphone",
     "profil": "Profil",
     "setting": "Paramètres",
-    "apkDownload": "Installer l'apk pour Android",
+    "apkDownload": "Installer l'APK pour Android",
     "explore": "Explorer",
     "search": "Rechercher...",
     "completeinformation": "Compléter les informations",
